# oas_gen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: any.rs  apipath.rs  create.rs  delete.rs  fetch.rs  generator.rs  jsonobject.rs  lib.rs  list.rs  oasgen.rs  okapi3.rs  openapi3.rs  queryparam.rs  replace.rs  update.rs  xtests.rs
src/oasgen/: mod.rs  securityscheme.rs
testdata/: README.md
