[package]
name = "oas_gen"
version = "0.4.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
repository = "https://gitlab.com/reed-wolf/oas_gen"
documentation = "https://docs.rs/oas_gen/"
license = "MIT OR Apache-2.0"
description = "An ergonomic, opinionated, builder pattern based api to build simple Open Api v3 specs in json for REST apis."

edition = "2018"
publish = true

[dependencies]
schemars = "0.7"
serde = "1.0"
serde_json = "1.0"
http = "0.2"
heck = "0.3"
serde_skip = "0.1.0"
contracts = { version = "0.3" }

[dev-dependencies]
schemars_derive = "0.7"
openapiv3 = "0.3"

[features]
# no features by default
default = []
teapot = []
