[package]
name = "oas_gen"
version = "0.4.9-alpha.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
repository = "https://gitlab.com/reed-wolf/oas_gen"
documentation = "https://docs.rs/oas_gen/"
license = "MIT OR Apache-2.0"
description = "An ergonomic, opinionated, builder pattern based api to build simple Open Api v3 specs in json for REST apis."

edition = "2018"
publish = true

[dependencies]
schemars = "0.8"
schemars_derive = "0.8"
serde = "1.0"
serde_json = "1.0"
http = ">=0.2"
heck = "0.3"
serde_skip = "0.1"
contracts = "0.6"

[dev-dependencies]
openapiv3 = "0.5"

[features]
# no features by default
default = []
teapot = []
